# email-agent-openenv

./: .env.example  README.md  app.py  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
data/: email_dataset.json
paper/: evaluation.md  experiment_flow.md  method.md  output_format.md  problem.md  research_question.md  system_design.md
server/: app.py  grader.py
tasks/: task1.py  task2.py  task3.py
