[project]
name = "email-agent-openenv"
version = "0.1.0"
description = "OpenEnv Email Agent Environment"
authors = [
    { name = "Shital Parab", email = "shitalparab2605@gmail.com" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "gradio",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
